--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "onDuty for tubeHR",
   "author": "Phantasweng <bensonuong@gmail.com>",
   "scripts": {
-    "onDuty": "node onDuty.js"
+    "start": "node onDuty.js"
   },
   "dependencies": {
+    "colors": "^1.3.2",
+    "commander": "^2.19.0",
     "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
-    "puppeteer": "^1.6.1"
+    "puppeteer": "^1.10.0"
   }
 }
