1. 修改 README 2. 修改 help 敘述 3. 增加 env 註解

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# 使用者帳號密碼 userName = 'username@domain.com', password = 'yourPassword'
 userName = ''
 password = ''
+
+# 登入頁面網址 loginUrl = 'https://your.login.com/url'
 loginUrl = 'https://auth.mayohr.com/HRM/Account/Login'
