--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "onDutyJs",
   "version": "1.0.0",
-  "description": "onDuty for tubeHR",
+  "description": "onDuty for tubeHR (Apollo XE)",
   "author": "Phantasweng <bensonuong@gmail.com>",
+  "main": "onDuty.js",
+  "license": "MIT",
   "scripts": {
     "start": "node onDuty.js"
   },
