--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onDutyJs",
+  "name": "on-duty-js",
   "version": "1.3.1",
   "description": "onDuty for tubeHR (Apollo XE)",
   "author": "Phantasweng <bensonuong@gmail.com>",
