--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:server": "rollup server/index.js --file bundle.js --format umd --name 'onDutyJs'",
     "build:js": "rollup src/index.js --file bundle.js --format umd --name 'onDutyJs'",
     "serve": "yarn build:server && node bundle.js",
-    "server": "yarn build:server && yarn pm2 start bundle.js --name 'onDutyJsApi'"
+    "server": "yarn build:server && yarn pm2 start bundle.js --name 'onDutyJsApi'",
+    "restart": "yarn pm2 delete onDutyJsApi && yarn pm2 start bundle.js --name 'onDutyJsApi' "
   },
   "dependencies": {
     "chalk": "^4.1.2",
